k8s/app/etcd-viewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mag20-etcd-viewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mag20-etcd-viewer
  template:
    metadata:
      labels:
        app: mag20-etcd-viewer
    spec:
      containers:
        - image: nikfoundas/etcd-viewer
          name: mag20-etcd-viewer
          ports:
            - containerPort: 8080
              name: etcd-viewer
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mag20-etcd-viewer
spec:
  type: LoadBalancer
  ports:
    - port: 9080
      protocol: TCP
      targetPort: etcd-viewer
  selector:
    app: mag20-etcd-viewer
