k8s/app/mag20-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mag20-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: httpbin-credential
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mag20-aws-storage
spec:
  hosts:
  - "*"
  gateways:
  - mag20-gateway
  http:
  - match:
    - uri:
        prefix: /aws/
    rewrite:
        uri: "/"
    route:
    - destination:
        port:
          number: 8002
        host: mag20-aws-storage
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: media-metadata
spec:
  hosts:
  - "*"
  gateways:
  - mag20-gateway
  http:
  - match:
    - uri:
        prefix: /media-metadata/
    rewrite:
        uri: "/"
    route:
    - destination:
        port:
          number: 8001
        host: mag20-media-metadata
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: media-chunks
spec:
  hosts:
  - "*"
  gateways:
  - mag20-gateway
  http:
  - match:
    - uri:
        prefix: /media-chunks/
    rewrite:
        uri: "/"
    route:
    - destination:
        port:
          number: 8004
        host: mag20-media-chunks
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sequence-service
spec:
  hosts:
  - "*"
  gateways:
  - mag20-gateway
  http:
  - match:
    - uri:
        prefix: /sequence/
    rewrite:
        uri: "/"
    route:
    - destination:
        port:
          number: 8009
        host: mag20-sequence-service
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: project-media-manager
spec:
  hosts:
  - "*"
  gateways:
  - mag20-gateway
  http:
  - match:
    - uri:
        prefix: /project-media-manager/
    rewrite:
        uri: "/"
    route:
    - destination:
        port:
          number: 8008
        host: mag20-project-media-manager
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: project-media-manager-health
spec:
  hosts:
  - "*"
  gateways:
  - mag20-gateway
  http:
  - match:
    - uri:
        prefix: /project-media-manager-health/
    rewrite:
        uri: "/"
    route:
    - destination:
        port:
          number: 8888
        host: mag20-project-media-manager
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sequence-manager
spec:
  hosts:
  - "*"
  gateways:
  - mag20-gateway
  http:
  - match:
    - uri:
        prefix: /sequence-manager/
    rewrite:
        uri: "/"
    route:
    - destination:
        port:
          number: 8010
        host: mag20-sequence-manager
#################################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: media-manager
spec:
  hosts:
  - "*"
  gateways:
  - mag20-gateway
  http:
  - match:
    - uri:
        prefix: /media-manager/
    rewrite:
        uri: "/"
    route:
    - destination:
        port:
          number: 8003
        host: mag20-media-manager
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chunk-downloader
spec:
  hosts:
  - "*"
  gateways:
  - mag20-gateway
  http:
  - match:
    - uri:
        prefix: /chunk-downloader/
    rewrite:
        uri: "/"
    route:
    - destination:
        port:
          number: 8005
        host: mag20-chunks-downloader
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chunk-downloader-health
spec:
  hosts:
  - "*"
  gateways:
  - mag20-gateway
  http:
  - match:
    - uri:
        prefix: /chunk-downloader-health/
    rewrite:
        uri: "/"
    route:
    - destination:
        port:
          number: 8888
        host: mag20-chunks-downloader
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hls-stream
spec:
  hosts:
  - "*"
  gateways:
  - mag20-gateway
  http:
  - match:
    - uri:
        prefix: /hls-stream/
    rewrite:
        uri: "/"
    route:
    - destination:
        port:
          number: 8006
        host: mag20-hls-stream
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hls-stream-health
spec:
  hosts:
  - "*"
  gateways:
  - mag20-gateway
  http:
  - match:
    - uri:
        prefix: /hls-stream-health/
    rewrite:
        uri: "/"
    route:
    - destination:
        port:
          number: 8888
        host: mag20-hls-stream
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: project-metadata
spec:
  hosts:
  - "*"
  gateways:
  - mag20-gateway
  http:
  - match:
    - uri:
        prefix: /project-metadata/
    rewrite:
        uri: "/"
    route:
    - destination:
        port:
          number: 8007
        host: mag20-project-metadata
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gql
spec:
  hosts:
  - "*"
  gateways:
  - mag20-gateway
  http:
  - match:
    - uri:
        prefix: /graphql
    route:
    - destination:
        port:
          number: 3000
        host: mag20-gql
